# pydb

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
src/pydb/: __init__.py  client.py  dbclient.py  dbms.py  exceptions.py  exporter.py  logger.py  main.py  reader.py  zipper.py
src/pydb/dbms/: arguments.py  connector.py  constants.py  exceptions.py  mssql.py  mysql.py  object_factory.py  oracle.py  postgresql.py
