[project]
name = "xdbcli"
version = "1.5.1"
description="Light CLI Oracle, Postgres, Mysql, Mssql"
readme = "README.md"
license = { text = "MIT License" }
authors = [
    { name = "Aleksandr Shabelsky", email = "a.shabelsky@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "colorama==0.4.4",
    "pep517==0.12.0",
    "wcwidth==0.2.5",
    "zipp==3.6.0",
    "pyparsing==3.0.7",
    "tomli==1.2.3",
    "typing_extensions==4.1.1",
    "importlib-metadata==4.8.3",
    "prettytable==2.5.0",
    "cffi==1.15.1",
    "cryptography==40.0.2",
    "pycparser==2.21",
]

[project.optional-dependencies]
oracle = ["oracledb==1.4.2"]
postgres = ["psycopg2-binary==2.9.1"]
mysql = ["PyMySQL==1.0.2"]
mssql = ["JayDeBeApi==1.2.3"]

[project.urls]
"Homepage" = "https://github.com/shabelski89/pydb"
"Bug Tracker" = "https://github.com/shabelski89/pydb/issues"

[project.scripts]
pydb = "pydb.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"